css overflow fix

--- a/_mobile.scss
+++ b/_mobile.scss
@@ -1,10 +1,12 @@
 @media only screen and (max-width: 768px) {
   body {
+    overflow: visible !important;
     .container {
       height: 50%;
       width: 100%;
       padding: 2rem 2rem 0rem 2rem;
       justify-content: flex-start;
+
       .form {
         width: 100%;
       }
