--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,7 @@ body {
   font-family: "Rubik", sans-serif;
   height: 100vh;
   font-size: 18px;
+  overflow: hidden;
 }
 .container {
   padding-top: 2.5rem;
